--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,15 @@
 <h1>Articles#new</h1>
 <p>Find me in app/views/articles/new.html.erb</p>
 
+<% if @article.errors.any? %>
+<h2>The following errors prevented the article for getting created</h2>
+  <ul>
+	<% @article.errors full_messages.each do |msg| %>
+	<li><%= msg %></li>
+	<%end%>
+  </ul>
+<%end%>
+
 <%= form_for @article do |f| %>
   <p>
   	<%= f.label :title%><br/>
