--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,7 +4,7 @@
 <% if @article.errors.any? %>
 <h2>The following errors prevented the article for getting created</h2>
   <ul>
-	<% @article.errors full_messages.each do |msg| %>
+	<% @article.errors.full_messages.each do |msg| %>
 	<li><%= msg %></li>
 	<%end%>
   </ul>
@@ -12,8 +12,8 @@
 
 <%= form_for @article do |f| %>
   <p>
-  	<%= f.label :title%><br/>
-  	<%= f.text_field :title%>
+  	<%= f.label :title %><br/>
+  	<%= f.text_field :title %>
   </p>
 
   <p>
