--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,4 @@
-<h1>Articles#new</h1>
-<p>Find me in app/views/articles/new.html.erb</p>
+<h1>Edit existing article</h1>
 
 <% if @article.errors.any? %>
 <h2>The following errors prevented the article for getting created</h2>
