--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,8 @@
 <h1>Showing selected article</h1>
 
-<<<<<<< HEAD
 <p> Title: <%= @article.title %></p>
 <p> Description: <%= @article.description %></p>
-=======
-<p>Title: <%= @article.title %> </p>
-<p>Description: <%= @article.description %></p>
->>>>>>> modeling-articles
+
+<%= link_to "Edis this article", edit_article_path(@article) %> |
+
+<%= link_to "Back to articles listing", articles_path %>
