--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -1,3 +1,4 @@
-<h1>StaticPages#new</h1>
-<p>Find me in app/views/static_pages/new.html.erb</p>
-<%=link_to "Alpha-Blog", articles_path %> | <%=link_to "About", about_path %>
+<div class="center jumbotron">
+<h1>ALPHA BLOG</h1>
+<%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg btn-xlarge" %>
+</div>
