Add styling to show page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,6 +38,15 @@
 	background: transparent;
 }
 
+.article_actions{
+	border-top: 1px solid #eaeaea;
+	padding-top: black;
+}
+
+.description{
+	margin-top: 0;
+}
+
 .footer {
 	margin-top: 45px;
 	padding-top: 5px;
