Add User model and associations

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,6 +38,11 @@
 	background: transparent;
 }
 
+.article-meta-details{
+	border-top: 1px solid #eaeaea;
+	margin-top: 15px;
+}
+
 .article_actions{
 	border-top: 1px solid #eaeaea;
 	padding-top: black;
